--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Welcome to My Website</title>
-</head>
-<body>
-  <h1>Hello, I'm GitWeb Test!</h1>
-  <p>This is my personal website.</p>
-</body>
-</html>
+---
+layout: default
+---
